# translation_tool

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  skills-lock.json
backend/: .env.example  Dockerfile  requirements.txt  run.py
backend/app/: config.py  main.py
backend/app/routes/: analyze_scenes.py  dubbing_audio.py  dubbing_status.py  export_video.py  generate_speech.py  process_video.py  start_dubbing.py  translate_voiceover.py
backend/app/services/: gemini_client.py  luminence_detector.py  text_render.py
backend/supabase/.temp/: pooler-url  project-ref
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: canvas-stub.js  frame-extractor.ts  script-parser.ts  supabase.ts
frontend/src/store/: app-store.ts
frontend/src/types/: index.ts
plans/: architecture-plan.md  script-upload-feature-plan.md
pod-translation-app/: next.config.js  package-lock.json  package.json  tailwind.config.ts
pod-translation-app/src/app/: globals.css  layout.tsx  page.tsx
pod-translation-app/src/lib/: api-client.ts  frame-extractor.ts  script-parser.ts  supabase.ts
pod-translation-app/src/store/: app-store.ts
pod-translation-app/src/types/: index.ts
supabase/: SUPABASE_SETUP_INSTRUCTIONS.md  config.toml  fix-storage-policies.sql  setup.sql
supabase/migrations/: 20260302000000_init.sql  20260302000001_fix_storage_policies.sql
(+25 files in other folders)
